# gamma-table-macros

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
examples/: basic_usage.rs
src/: lib.rs
tests/: integration_tests.rs
tests/compile_fail/: size_one.rs  size_one.stderr  size_too_small.rs  size_too_small.stderr  values_too_large_for_type.rs  values_too_large_for_type.stderr
